successfully auto sorts requests by completion

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
 @import url('./serviceForm.css');
+@import url('./requests.css');
 
 /*Typography
 --------------------------------------------------------------*/
