--- a/src/styles/requests.css
+++ b/src/styles/requests.css
@@ -1,34 +1,34 @@
 .request__list {
     list-style: none;
-    display: flex;
-    flex-direction: column;
 }
 
 .eachLine {
     display: flex;
-    /* border: 2px black solid; */
     background-color: darkgray;
     justify-content: space-between;
+    max-width: 50em;
 }
 .eachLine:nth-child(odd) {
-    display: flex;
-    /* border: 2px black solid; */
     background-color: lightgray;
 }
 
 .request__list__li {
     padding: 5px 5px 5px 5px;
+    justify-content: flex-start;
 }
 
 .request__delete {
     background-color: lightcoral;
     font-weight: bold;
     margin-left: 20px;
-    justify-content: flex-end;
+    border-radius: 15px;
+    max-height: 31px;
 }
 
 .plumbers {
-    justify-self: flex-end;
+    order: -1;
+    border-radius: 15px;
+    max-height: 31px;
 }
 
 .request__completed{
@@ -36,6 +36,7 @@
     background-color: lightgreen;
     display: flex;
     justify-content: space-between;
+    max-width: 50em;
 }
 .request__completed:nth-child(even){
     font-style: italic;
